Time: 9 ms (63.29%), Space: 64.7 MB (33.33%) - LeetHub